--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.example.liuqiangapp">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".ButtonActivity"></activity>
-        <activity android:name=".Unit3Activity" />
+        <activity android:name=".Unit3.CalculatorActivity"></activity>
+        <activity android:name=".Unit3.ImageViewActivity" />
+        <activity android:name=".Unit3.ButtonActivity" />
+        <activity android:name=".Unit3.Unit3Activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
