--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".Unit4.ActLifeActivity"></activity>
-        <activity android:name=".Unit3.CalculatorActivity" />
-        <activity android:name=".Unit3.ImageViewActivity" />
-        <activity android:name=".Unit3.ButtonActivity" />
-        <activity android:name=".Unit3.Unit3Activity" />
+        <activity android:name=".chapter04.Chapter04ActionUriActivity"></activity>
+        <activity android:name=".chapter04.Chapter04MainActivity" />
+        <activity android:name=".chapter04.ActLifeActivity" />
+        <activity android:name=".chapter03.CalculatorActivity" />
+        <activity android:name=".chapter03.ImageViewActivity" />
+        <activity android:name=".chapter03.ButtonActivity" />
+        <activity android:name=".chapter03.Chapter03MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
