--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".chapter04.Chapter04ActionUriActivity"></activity>
+        <activity android:name=".chapter04.Chapter04LoginInputActivity"></activity>
+        <activity android:name=".chapter04.Chapter04JumpFirstActivity" />
+        <activity android:name=".chapter04.Chapter04ActStartActivity" />
+        <activity android:name=".chapter04.Chapter04MetaDataActivity">
+            <meta-data
+                android:name="weather"
+                android:value="@string/weather" />
+        </activity>
+        <activity android:name=".chapter04.Chapter04ActionUriActivity" />
         <activity android:name=".chapter04.Chapter04MainActivity" />
-        <activity android:name=".chapter04.ActLifeActivity" />
+        <activity android:name=".chapter04.Chapter04ActLifeActivity" />
         <activity android:name=".chapter03.CalculatorActivity" />
         <activity android:name=".chapter03.ImageViewActivity" />
         <activity android:name=".chapter03.ButtonActivity" />
@@ -21,6 +29,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
         <activity android:name=".SecondActivity" />
     </application>
